--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "gomars",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.upbit.com",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "jsonwebtoken": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-tooltip": "^5.20.0",
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^6.0.5",
+    "swiper": "^10.1.0",
+    "util": "^0.12.5",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +46,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "customize-cra": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1"
   }
 }
