--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "util": "^0.12.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19",
     "zustand": "^4.4.0"
   },
   "scripts": {
